| Bug #54668 | User variable assignments get wrong type | ||
|---|---|---|---|
| Submitted: | 21 Jun 2010 13:36 | Modified: | 27 Jul 2010 0:50 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Charsets | Severity: | S3 (Non-critical) |
| Version: | 5.5.3+ | OS: | Any |
| Assigned to: | Alexander Barkov | CPU Architecture: | Any |
[21 Jun 2010 13:36]
Paul DuBois
[21 Jun 2010 14:10]
Valeriy Kravchuk
Verified just as described with recent mysql-trunk on Mac OS X. See file uploaded.
[21 Jun 2010 14:11]
Valeriy Kravchuk
Demonstration of the bug
Attachment: bug54668.txt (text/plain), 12.61 KiB.
[23 Jun 2010 5:29]
Alexander Barkov
This is an unexpected regression.
[8 Jul 2010 14:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/113146 3099 Alexander Barkov 2010-07-08 Bug#54668 User variable assignments get wrong type Problem: Item_str_ascii_func::val_str() did not set charset of the returned value properly. mysql-test/include/ctype_numconv.inc mysql-test/r/ctype_binary.result mysql-test/r/ctype_cp1251.result mysql-test/r/ctype_latin1.result mysql-test/r/ctype_ucs.result - Adding tests sql/item_strfunc.cc - Adding initialization of charset
[9 Jul 2010 5:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/113204 3104 Alexander Barkov 2010-07-09 Bug#54668 User variable assignments get wrong type Problem: Item_str_ascii_func::val_str() did not set charset of the returned value properly. mysql-test/include/ctype_numconv.inc mysql-test/r/ctype_binary.result mysql-test/r/ctype_cp1251.result mysql-test/r/ctype_latin1.result mysql-test/r/ctype_ucs.result - Adding tests sql/item_strfunc.cc - Adding initialization of charset
[9 Jul 2010 6:04]
Alexander Barkov
Pushed into mysql-trunk-bugfixing (5.5.6-m3) Pushed into mysql-next-mr-bugfixing (5.6.99-m4)
[23 Jul 2010 12:26]
Bugs System
Pushed into mysql-trunk 5.5.6-m3 (revid:alik@sun.com-20100723121820-jryu2fuw3pc53q9w) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:18)
[23 Jul 2010 12:33]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100723121929-90e9zemk3jkr2ocy) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (pib:18)
[27 Jul 2010 0:50]
Paul DuBois
Noted in 5.5.6 changelog. Assignments of the PASSWORD() or OLD_PASSWORD() function to a user variable did not preserve the character set of the function return value.
